fixed issue with datatype in neuroscope.py called by convert_yuta.py; also removed unnecessary helper modules

--- a/buzsaki_lab_to_nwb/original-code/original_code/Test_add_position_data.ipynb
+++ b/buzsaki_lab_to_nwb/original-code/original_code/Test_add_position_data.ipynb
@@ -389,16 +389,16 @@
     {
      "data": {
       "text/plain": [
-       "position_sensor0 pynwb.behavior.SpatialSeries at 0x1308192518792\n",
+       "position_sensor0 pynwb.behavior.SpatialSeries at 0x3035520675912\n",
        "Fields:\n",
        "  comments: no comments\n",
        "  conversion: 1.0\n",
-       "  data: <hdmf.backends.hdf5.h5_utils.H5DataIO object at 0x000001309659B548>\n",
+       "  data: <hdmf.backends.hdf5.h5_utils.H5DataIO object at 0x000002C2C2339188>\n",
        "  description: raw sensor data from sensor 0\n",
        "  interval: 1\n",
        "  reference_frame: unknown\n",
        "  resolution: nan\n",
-       "  timestamps: <hdmf.backends.hdf5.h5_utils.H5DataIO object at 0x000001309659BC88>\n",
+       "  timestamps: <hdmf.backends.hdf5.h5_utils.H5DataIO object at 0x000002C2C2C2BAC8>\n",
        "  timestamps_unit: seconds\n",
        "  unit: meters"
       ]
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,23 +443,23 @@
     "              H5DataIO(df[[names[0], names[1]]].values, compression='gzip'),\n",
     "              'unknown', description='raw sensor data from sensor 0',\n",
     "              rate=fs,\n",
-    "              starting_time = df.index.values[0],\n",
+    "              starting_time = 0.,\n",
     "              resolution=np.nan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "position_sensor0 pynwb.behavior.SpatialSeries at 0x1308192654344\n",
+       "position_sensor0 pynwb.behavior.SpatialSeries at 0x3035520677128\n",
        "Fields:\n",
        "  comments: no comments\n",
        "  conversion: 1.0\n",
-       "  data: <hdmf.backends.hdf5.h5_utils.H5DataIO object at 0x000001309659B788>\n",
+       "  data: <hdmf.backends.hdf5.h5_utils.H5DataIO object at 0x000002C2C3212B48>\n",
        "  description: raw sensor data from sensor 0\n",
        "  rate: 39.0625\n",
        "  reference_frame: unknown\n",
@@ -469,7 +469,7 @@
        "  unit: meters"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,30 +480,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'x0'"
+       "array([[   nan,    nan],\n",
+       "       [   nan,    nan],\n",
+       "       [   nan,    nan],\n",
+       "       ...,\n",
+       "       [362.  , 171.  ],\n",
+       "       [362.  , 171.13],\n",
+       "       [362.  , 171.94]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names[0]"
+    "TestSeries2.data[()]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
