--- a/buzsaki_lab_to_nwb/original-code/original_code/run_convert_yuta.ipynb
+++ b/buzsaki_lab_to_nwb/original-code/original_code/run_convert_yuta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18,27 +18,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "writing lfp data: 100%|███████████████████████████████████████████████████████| 1000/1000 [00:00<00:00, 1032062.99it/s]"
+      "writing lfp data: 100%|████████████████████████████████████████████████████████| 1000/1000 [00:00<00:00, 509883.78it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "filtering LFP...done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "filtering LFP...done.\n",
       "loading position for OpenFieldPosition_ExtraLarge...done.\n",
       "loading position for OpenFieldPosition_New_Curtain...done.\n",
       "loading position for OpenFieldPosition_New...done.\n",
@@ -52,37 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\common\\table.py:330: UserWarning: An attribute 'spike_times' already exists on Units 'units' so this column cannot be accessed as an attribute, e.g., table.spike_times; it can only be accessed using other methods, e.g., table['spike_times'].\n",
-      "  warn(msg)\n",
-      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\common\\table.py:330: UserWarning: An attribute 'electrode_group' already exists on Units 'units' so this column cannot be accessed as an attribute, e.g., table.electrode_group; it can only be accessed using other methods, e.g., table['electrode_group'].\n",
-      "  warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "writing NWB file..."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\build\\objectmapper.py:225: DtypeConversionWarning: Spec 'SpatialSeries/timestamps': Value with data type float64 is being converted to data type float64 as specified.\n",
-      "  warnings.warn(full_warning_msg, DtypeConversionWarning)\n",
-      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\build\\objectmapper.py:225: DtypeConversionWarning: Spec 'TimeIntervals/start_time': Value with data type uint16 is being converted to data type float32 as specified.\n",
-      "  warnings.warn(full_warning_msg, DtypeConversionWarning)\n",
-      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\build\\objectmapper.py:225: DtypeConversionWarning: Spec 'TimeIntervals/stop_time': Value with data type uint16 is being converted to data type float32 as specified.\n",
-      "  warnings.warn(full_warning_msg, DtypeConversionWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done.\n",
-      "testing read...done.\n"
+      "\n"
      ]
     }
    ],
@@ -92,6 +49,13 @@
     "convert_yuta.yuta2nwb(session_path='D:/BuzsakiData/SenzaiY/YutaMouse41/YutaMouse41-150903',\n",
     "                      include_spike_waveforms=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
