Added raw acquisition functions to neuroscope.py and convert_yuta.py; local testing on stubbed version performed, also tested memmap shape with local temporary read/write

--- a/buzsaki_lab_to_nwb/original-code/Compare_DANDI_to_FreshConversion.ipynb
+++ b/buzsaki_lab_to_nwb/original-code/Compare_DANDI_to_FreshConversion.ipynb
@@ -9,7 +9,7 @@
     "from pynwb import NWBHDF5IO\n",
     "from pynwb import NWBFile\n",
     "\n",
-    "io = NWBHDF5IO('D:\\\\BuzsakiData\\\\SenzaiY\\\\YutaMouse41\\\\YutaMouse41-150903\\\\sub-YutaMouse41_ses-YutaMouse41-150903_behavior+ecephys.nwb', 'r')\n",
+    "io = NWBHDF5IO('D:\\\\BuzsakiData\\\\SenzaiY\\\\YutaMouse41\\\\sub-YutaMouse41_ses-YutaMouse41-150903_behavior+ecephys.nwb', 'r')\n",
     "nwbDANDI = io.read()\n",
     "\n",
     "io = NWBHDF5IO('D:\\\\BuzsakiData\\\\SenzaiY\\\\YutaMouse41\\\\YutaMouse41-150903_stub.nwb', 'r')\n",
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "root pynwb.file.NWBFile at 0x2680920413000\n",
+       "root pynwb.file.NWBFile at 0x2232059558728\n",
        "Fields:\n",
        "  acquisition: {\n",
        "    ch_SsolL <class 'pynwb.base.TimeSeries'>,\n",
@@ -86,7 +86,7 @@
        "    PulseStim_5V_77777ms_LD12 <class 'pynwb.misc.AnnotationSeries'>,\n",
        "    PulseStim_5V_77877ms_LD12 <class 'pynwb.misc.AnnotationSeries'>\n",
        "  }\n",
-       "  subject: subject pynwb.file.Subject at 0x2680920902152\n",
+       "  subject: subject pynwb.file.Subject at 0x2232059559688\n",
        "Fields:\n",
        "  age: 346 days 00:00:00\n",
        "  genotype: POMC-Cre::Arch\n",
@@ -115,9 +115,10 @@
     {
      "data": {
       "text/plain": [
-       "root pynwb.file.NWBFile at 0x2680920933576\n",
+       "root pynwb.file.NWBFile at 0x2232059985032\n",
        "Fields:\n",
        "  acquisition: {\n",
+       "    ES <class 'pynwb.ecephys.ElectricalSeries'>,\n",
        "    ch_SsolL <class 'pynwb.base.TimeSeries'>,\n",
        "    ch_SsolR <class 'pynwb.base.TimeSeries'>,\n",
        "    ch_arm <class 'pynwb.base.TimeSeries'>,\n",
@@ -147,7 +148,7 @@
        "  electrodes: electrodes <class 'hdmf.common.table.DynamicTable'>\n",
        "  epochs: epochs <class 'pynwb.epoch.TimeIntervals'>\n",
        "  experimenter: ['Yuta Senzai']\n",
-       "  file_create_date: [datetime.datetime(2020, 6, 19, 16, 52, 28, 962787, tzinfo=tzoffset(None, -14400))]\n",
+       "  file_create_date: [datetime.datetime(2020, 6, 28, 17, 21, 14, 222182, tzinfo=tzoffset(None, -14400))]\n",
        "  identifier: YutaMouse41-150903\n",
        "  institution: NYU\n",
        "  intervals: {\n",
@@ -177,7 +178,7 @@
        "    PulseStim_5V_77777ms_LD12 <class 'pynwb.misc.AnnotationSeries'>,\n",
        "    PulseStim_5V_77877ms_LD12 <class 'pynwb.misc.AnnotationSeries'>\n",
        "  }\n",
-       "  subject: subject pynwb.file.Subject at 0x2680920933256\n",
+       "  subject: subject pynwb.file.Subject at 0x2232059983688\n",
        "Fields:\n",
        "  age: 346 days 00:00:00\n",
        "  genotype: POMC-Cre::Arch\n",
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,8 +250,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check Trials"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -300,10 +308,281 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'behavior': behavior pynwb.base.ProcessingModule at 0x2232059687688\n",
+       " Fields:\n",
+       "   data_interfaces: {\n",
+       "     EightMazePosition_position <class 'pynwb.behavior.Position'>,\n",
+       "     OpenFieldPosition_ExtraLarge_position <class 'pynwb.behavior.Position'>,\n",
+       "     OpenFieldPosition_New_Curtain_position <class 'pynwb.behavior.Position'>,\n",
+       "     OpenFieldPosition_New_position <class 'pynwb.behavior.Position'>,\n",
+       "     OpenFieldPosition_Old_Curtain_position <class 'pynwb.behavior.Position'>,\n",
+       "     OpenFieldPosition_Old_position <class 'pynwb.behavior.Position'>,\n",
+       "     OpenFieldPosition_Oldlast_position <class 'pynwb.behavior.Position'>,\n",
+       "     states <class 'pynwb.epoch.TimeIntervals'>\n",
+       "   }\n",
+       "   description: contains processed behavioral data,\n",
+       " 'ecephys': ecephys pynwb.base.ProcessingModule at 0x2232059688968\n",
+       " Fields:\n",
+       "   data_interfaces: {\n",
+       "     LFP <class 'pynwb.ecephys.LFP'>,\n",
+       "     LFPDecompositionSeries <class 'pynwb.misc.DecompositionSeries'>,\n",
+       "     SpikeEventSeries1 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "     SpikeEventSeries2 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "     SpikeEventSeries3 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "     SpikeEventSeries4 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "     SpikeEventSeries5 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "     SpikeEventSeries6 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "     SpikeEventSeries7 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "     SpikeEventSeries8 <class 'pynwb.ecephys.SpikeEventSeries'>\n",
+       "   }\n",
+       "   description: intermediate data from extracellular electrophysiology recordings, e.g., LFP}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbDANDI.processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check behavioral (non-acquisition) positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EightMazePosition_position pynwb.behavior.Position at 0x2232059612616\n",
+       "Fields:\n",
+       "  spatial_series: {\n",
+       "    EightMazePosition_twhl_linearized_spatial_series <class 'pynwb.behavior.SpatialSeries'>,\n",
+       "    EightMazePosition_twhl_norm_spatial_series <class 'pynwb.behavior.SpatialSeries'>\n",
+       "  }"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbDANDI.processing['behavior']['EightMazePosition_position']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EightMazePosition_position pynwb.behavior.Position at 0x2232077406792\n",
+       "Fields:\n",
+       "  spatial_series: {\n",
+       "    EightMazePosition_twhl_linearized_spatial_series <class 'pynwb.behavior.SpatialSeries'>,\n",
+       "    EightMazePosition_twhl_norm_spatial_series <class 'pynwb.behavior.SpatialSeries'>\n",
+       "  }"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbFreshConversion.processing['behavior']['EightMazePosition_position']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[        nan,         nan],\n",
+       "       [        nan,         nan],\n",
+       "       [        nan,         nan],\n",
+       "       ...,\n",
+       "       [ 0.        , -1.35640775],\n",
+       "       [ 0.        , -1.35660094],\n",
+       "       [ 0.        , -1.35660094]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbFreshConversion.processing['behavior']['EightMazePosition_position']['EightMazePosition_twhl_linearized_spatial_series'].data[()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check ecephys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ecephys pynwb.base.ProcessingModule at 0x2232059688968\n",
+       "Fields:\n",
+       "  data_interfaces: {\n",
+       "    LFP <class 'pynwb.ecephys.LFP'>,\n",
+       "    LFPDecompositionSeries <class 'pynwb.misc.DecompositionSeries'>,\n",
+       "    SpikeEventSeries1 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries2 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries3 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries4 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries5 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries6 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries7 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries8 <class 'pynwb.ecephys.SpikeEventSeries'>\n",
+       "  }\n",
+       "  description: intermediate data from extracellular electrophysiology recordings, e.g., LFP"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbDANDI.processing['ecephys']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lfp pynwb.ecephys.ElectricalSeries at 0x2232059815240\n",
+       "Fields:\n",
+       "  comments: no comments\n",
+       "  conversion: nan\n",
+       "  data: <HDF5 dataset \"data\": shape (50461375, 64), type \"<i2\">\n",
+       "  description: lfp signal for all shank electrodes\n",
+       "  electrodes: electrodes <class 'hdmf.common.table.DynamicTableRegion'>\n",
+       "  rate: 1250.0\n",
+       "  resolution: nan\n",
+       "  starting_time: 0.0\n",
+       "  starting_time_unit: seconds\n",
+       "  unit: volts"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbDANDI.processing['ecephys']['LFP']['lfp']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-419, -660, -535, ...,  388,  378,  360],\n",
+       "       [-410, -602, -520, ...,  572,  478,  532],\n",
+       "       [-353, -467, -443, ...,  710,  636,  653],\n",
+       "       ...,\n",
+       "       [-560, -371, -462, ...,   89,   18,   91],\n",
+       "       [-467, -298, -399, ...,   71,   21,   29],\n",
+       "       [-578, -355, -476, ...,  -26,  -86,  -58]], dtype=int16)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbDANDI.processing['ecephys']['LFP']['lfp'].data[()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ecephys pynwb.base.ProcessingModule at 0x2232077422280\n",
+       "Fields:\n",
+       "  data_interfaces: {\n",
+       "    LFP <class 'pynwb.ecephys.LFP'>,\n",
+       "    LFPDecompositionSeries <class 'pynwb.misc.DecompositionSeries'>,\n",
+       "    SpikeEventSeries1 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries2 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries3 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries4 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries5 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries6 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries7 <class 'pynwb.ecephys.SpikeEventSeries'>,\n",
+       "    SpikeEventSeries8 <class 'pynwb.ecephys.SpikeEventSeries'>\n",
+       "  }\n",
+       "  description: intermediate data from extracellular electrophysiology recordings, e.g., LFP"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nwbFreshConversion.a['ecephys']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check raw acquisition"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nwbFreshConversion.processing['ecephys']"
+   ]
   }
  ],
  "metadata": {
