--- a/buzsaki_lab_to_nwb/original-code/original_code/run_convert_yuta.ipynb
+++ b/buzsaki_lab_to_nwb/original-code/original_code/run_convert_yuta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,6 +11,20 @@
      "text": [
       "reading and writing raw position data...warning: time may not be aligned\n",
       "setting up electrodes...0\n",
+      "reading raw electrode data...writing raw electrode data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "writing raw electrode data: 100%|██████████████████████████████████████████████| 1000/1000 [00:00<00:00, 976327.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "reading LFPs...writing LFPs...\n"
      ]
     },
@@ -18,7 +32,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "writing lfp data: 100%|████████████████████████████████████████████████████████| 1000/1000 [00:00<00:00, 509883.78it/s]"
+      "\n",
+      "writing lfp data: 100%|███████████████████████████████████████████████████████| 1000/1000 [00:00<00:00, 1002462.72it/s]"
      ]
     },
     {
@@ -26,6 +41,21 @@
      "output_type": "stream",
      "text": [
       "filtering LFP...done.\n",
+      "writing waveforms..."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done.\n",
       "loading position for OpenFieldPosition_ExtraLarge...done.\n",
       "loading position for OpenFieldPosition_New_Curtain...done.\n",
       "loading position for OpenFieldPosition_New...done.\n",
@@ -39,7 +69,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\common\\table.py:330: UserWarning: An attribute 'spike_times' already exists on Units 'units' so this column cannot be accessed as an attribute, e.g., table.spike_times; it can only be accessed using other methods, e.g., table['spike_times'].\n",
+      "  warn(msg)\n",
+      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\common\\table.py:330: UserWarning: An attribute 'electrode_group' already exists on Units 'units' so this column cannot be accessed as an attribute, e.g., table.electrode_group; it can only be accessed using other methods, e.g., table['electrode_group'].\n",
+      "  warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing NWB file..."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\build\\objectmapper.py:225: DtypeConversionWarning: Spec 'SpikeEventSeries/timestamps': Value with data type int32 is being converted to data type float64 as specified.\n",
+      "  warnings.warn(full_warning_msg, DtypeConversionWarning)\n",
+      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\build\\objectmapper.py:225: DtypeConversionWarning: Spec 'SpatialSeries/timestamps': Value with data type float64 is being converted to data type float64 as specified.\n",
+      "  warnings.warn(full_warning_msg, DtypeConversionWarning)\n",
+      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\build\\objectmapper.py:225: DtypeConversionWarning: Spec 'TimeIntervals/start_time': Value with data type uint16 is being converted to data type float32 as specified.\n",
+      "  warnings.warn(full_warning_msg, DtypeConversionWarning)\n",
+      "C:\\Users\\Raven\\anaconda3\\lib\\site-packages\\hdmf\\build\\objectmapper.py:225: DtypeConversionWarning: Spec 'TimeIntervals/stop_time': Value with data type uint16 is being converted to data type float32 as specified.\n",
+      "  warnings.warn(full_warning_msg, DtypeConversionWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done.\n",
+      "testing read...done.\n"
      ]
     }
    ],
@@ -47,7 +109,7 @@
     "import convert_yuta\n",
     "\n",
     "convert_yuta.yuta2nwb(session_path='D:/BuzsakiData/SenzaiY/YutaMouse41/YutaMouse41-150903',\n",
-    "                      include_spike_waveforms=False)"
+    "                      include_spike_waveforms=True)"
    ]
   },
   {
