added description of mat files

--- a/buzsaki_lab_to_nwb/yuta_code_visual_cortex/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/yuta_code_visual_cortex/files_documentation.ipynb
@@ -276,8 +276,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_files_dic = {p.stem:p for p in session_path.iterdir() if p.suffix=='.mat'}\n",
-    "mat_files_dic.keys()"
+    "mat_files_dic = {p.stem:p for p in session_path.iterdir() if p.suffix=='.mat'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As there are many files available we will sort them out"
    ]
   },
   {
@@ -286,7 +292,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'cell_metrics'"
+    "mat_files_list = list(mat_files_dic.keys())\n",
+    "mat_files_list.sort()\n",
+    "pprint(mat_files_list, compact=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We find the following files:\n",
+    "\n",
+    "    ['YMV01_170818--InterpDownLFP_params', 'YMV01_170818--InterpUpDownLFP_params',\n",
+    "    'YMV01_170818--LFPbasedLayer', 'YMV01_170818-DownUpAlignedLFP-CSD',\n",
+    "    'YMV01_170818-MonoSynConvClick', 'YMV01_170818-UnitPhaseMod',\n",
+    "    'YMV01_170818.EMGFromLFP.LFP', 'YMV01_170818.SleepScoreLFP.LFP',\n",
+    "    'YMV01_170818.SleepScoreMetrics.LFP', 'YMV01_170818.SleepState.states',\n",
+    "    'YMV01_170818.SlowWaves.events', 'YMV01_170818.StatePlotMaterials',\n",
+    "    'YMV01_170818.cell_metrics.cellinfo', 'YMV01_170818.chanCoords.channelInfo',\n",
+    "    'YMV01_170818.eegstates', 'YMV01_170818.mono_res.cellinfo',\n",
+    "    'YMV01_170818.noiseLevel.channelInfo', 'YMV01_170818.session',\n",
+    "    'YMV01_170818.spikes.cellinfo',\n",
+    "    'YMV01_170818.waveform_filter_metrics.cellinfo', 'YMV01_170818_UnitFeature',\n",
+    "    'YMV01_170818_meanWaveforms', 'YMV01_170818_wavelet_NREM_8_300Hz',\n",
+    "    'YMV01_170818_wavelet_NREM_8_300Hz--Whiten',\n",
+    "    'YMV01_170818_wavelet_REM_8_300Hz', 'YMV01_170818_wavelet_REM_8_300Hz--Whiten',\n",
+    "    'YMV01_170818_wavelet_WAKE_8_300Hz',\n",
+    "    'YMV01_170818_wavelet_WAKE_8_300Hz--Whiten', 'autoclusta_params',\n",
+    "    'cell_metrics', 'chanMap', 'depthsort_parameter_1', 'meanWaveforms', 'rez',\n",
+    "    'session']\n",
+    "\n",
+    "Let's focus on the last files:\n",
+    "* `session` : contains general information related to the session such as the experimenter, the species, the strain and timestamps for the creation of the session.\n",
+    "* `cell_metrics` : here we find important information concerning the cells as well as some of the session information duplicated. Here we can find information related to the specific cells that were identified in the study such as the number of cell identified,  their brain region, their putative type, etcera. In general these files have an struture equal to the number of cells that were found. That is, structure would be (1, n_cells) where n_cells is the number of the cells identified.\n",
+    "* `chanMap` : This seems to be concerned with information of the channels in the electrode. For example we find both the x and y coordinates of each of the channels. The structure of the files here is (1, n_channels) where n_channels is 64 for this setup.\n",
+    "* `rez` : seems to be a collection of parameters, not clear for which."
    ]
   },
   {
@@ -300,9 +340,16 @@
     "try:\n",
     "    mat_file = loadmat(mat_file_path)\n",
     "except NotImplementedError:\n",
-    "    mat_file = mat73.loadmat(mat_file_path, use_attrdict=True)\n",
-    "print(mat_file_path.name, type(mat_file))\n",
-    "print(mat_file.keys())"
+    "    mat_file = mat73.loadmat(mat_file_path, use_attrdict=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_file['cell_metrics'].keys()"
    ]
   },
   {
@@ -311,6 +358,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_file['cell_metrics']['general']"
+   ]
   },
   {
    "cell_type": "code",
@@ -340,8 +396,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numpy_files_dic = {p.stem:p for p in session.rglob('*') if p.suffix == '.npy'}\n",
+    "numpy_files_dic = {p.stem:p for p in session_path.rglob('*') if p.suffix == '.npy'}\n",
     "numpy_files_dic.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output should something like the following files depending on the session\n",
+    "\n",
+    "    ['templates_ind', 'spike_times', 'templates', 'pc_feature_ind',\n",
+    "    'whitening_mat_inv', 'similar_templates', 'spike_clusters', 'template_features', \n",
+    "    'spike_templates', 'template_feature_ind', 'amplitudes', 'channel_map',\n",
+    "    'pc_features', 'channel_positions', 'whitening_mat']"
    ]
   },
   {
@@ -427,7 +495,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pickle_files_dic = {p.stem:p for p in session_path.rglob('*') if p.suffix == '.pkl'}\n",
+    "pickle_files_dic.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All of those files are in the in the hidden folder for the `phy` software"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Opening the files is not working right now. Not priority as it is not clear that we will have to parse  this files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "file_name = 'spikes_per_cluster'\n",
+    "file_path = pickle_files_dic[file_name]\n",
+    "with open(str(file_path), 'rb') as f:\n",
+    "    data = pickle.load(f)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -441,7 +540,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tsv_files_dic = {p.stem:p for p in session_path.rglob('*') if p.suffix == '.tsv'}\n",
+    "tsv_files_dic.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The only file here is `cluster_group`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = 'cluster_group'\n",
+    "file_path = tsv_files_dic[file_name]\n",
+    "\n",
+    "df_cluster_group = pd.read_csv(file_path, sep='\\t')\n",
+    "df_cluster_group.head()"
+   ]
   },
   {
    "cell_type": "markdown",
